--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -13,7 +13,7 @@
 .nav {
   position: relative;
   width: 100%;
-  min-height: 68px;
+  min-height: 100px;
   padding: 0 32px;
   display: flex;
   align-items: center;
@@ -34,8 +34,8 @@
 }
 
 .logo {
-  width: 180px;
-  height: 56px;
+  width: 280px;
+  height: 86px;
   object-fit: contain;
   display: block;
 }
@@ -211,21 +211,25 @@
     pointer-events: auto;
   }
 
+  .nav {
+    min-height: 90px;
+  }
+
   .logo {
-    width: 152px;
-    height: 48px;
+    width: 230px;
+    height: 70px;
   }
 }
 
 @media (max-width: 430px) {
   .nav {
     padding: 0 16px;
-    min-height: 56px;
+    min-height: 76px;
   }
 
   .logo {
-    width: 124px;
-    height: 39px;
+    width: 170px;
+    height: 52px;
   }
 }
 
