--- a/src/components/sections/Hero.module.css
+++ b/src/components/sections/Hero.module.css
@@ -69,7 +69,7 @@
   z-index: 4;
   text-align: center;
   width: min(980px, 96%);
-  margin: 90px auto 0;
+  margin: 120px auto 0;
 }
 
 .label {
